Revision history for DBIx-Perlish

0.19  Wed Feb 28 16:58:35 2007
       Modify the code so that it is usable with Safe.pm.
       Better daignostic messages.
       Joins understand <= as well as => delimiter.
       Make db_select {} an alias to db_fetch {}.
       Add support for <- @$ary and <- [1,2,3].

0.18  Wed Feb 21 19:57:17 2007
       Comparisons with undefined values are converted into
       proper SQL syntax.
       Inside regular expressions, interpolate hash and hashref
       elements.
       Implemented except {}.
       Various types of joins implemented (by Dmitry Karasik).

0.17  Tue Feb 20 10:26:21 2007
       Added autogrouping when aggregates were seen in the return statement.

0.16  Fri Feb 16 21:49:06 2007
       Column descriptors can be embedded in strings.
       More tests.
       More docs.
       Pod coverage test fix.
       Added support for defined() as IS NOT NULL.
       Added support for tab->id  <-  @ary syntax.

0.15  Fri Feb 16 10:26:44 2007
       sql() is now prototyped.
       Implemented union {} and intersect {}.
       String concatenation is now supported.

0.14  Tue Feb 13 16:32:50 2007
       Added post-if parse-time simple conditionals.
       Added interpolation of scalars in regular expresions.
       Added special handling of sysdate() in Oracle.
       Verbatim sql() in inserts.
       Verbatim sql() in query subs.
       Support expressions in return statements.

0.13  Fri Feb  9 12:28:20 2007
       Added an ability to return complete table (tab.*).
       Added two ways to specify table names at run-time.
       Added an ability to use $hash{const} and $hash->{const} as values.
       More tests.
       More docs.

0.12  Wed Feb  7 13:24:19 2007
       Documentation and makefile cleanup.

0.11  Wed Feb  7 12:38:38 2007
       Sub-queries can refer to tables in the outer scope.
       Translate "lc" and "uc" to "lower" and "upper", respectively.
       Added support to EXISTS-style sub-queries.