@@ -1,5 +1,8 @@
 Revision history for DBIx-Perlish
 
+NEXT
+       Add support for variable column names.
+
 0.19  Wed Feb 28 16:58:35 2007
        Modify the code so that it is usable with Safe.pm.
        Better daignostic messages.
